; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/core/extr_devio.c_proc_allow_suspend.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/core/extr_devio.c_proc_allow_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_dev_state = type { i32, i32, i32 }

@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_dev_state*)* @proc_allow_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proc_allow_suspend(%struct.usb_dev_state* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usb_dev_state*, align 8
  store %struct.usb_dev_state* %0, %struct.usb_dev_state** %3, align 8
  %4 = load %struct.usb_dev_state*, %struct.usb_dev_state** %3, align 8
  %5 = call i32 @connected(%struct.usb_dev_state* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @ENODEV, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %2, align 4
  br label %27

10:                                               ; preds = %1
  %11 = load %struct.usb_dev_state*, %struct.usb_dev_state** %3, align 8
  %12 = getelementptr inbounds %struct.usb_dev_state, %struct.usb_dev_state* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @WRITE_ONCE(i32 %13, i32 1)
  %15 = load %struct.usb_dev_state*, %struct.usb_dev_state** %3, align 8
  %16 = getelementptr inbounds %struct.usb_dev_state, %struct.usb_dev_state* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %26, label %19

19:                                               ; preds = %10
  %20 = load %struct.usb_dev_state*, %struct.usb_dev_state** %3, align 8
  %21 = getelementptr inbounds %struct.usb_dev_state, %struct.usb_dev_state* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @usb_autosuspend_device(i32 %22)
  %24 = load %struct.usb_dev_state*, %struct.usb_dev_state** %3, align 8
  %25 = getelementptr inbounds %struct.usb_dev_state, %struct.usb_dev_state* %24, i32 0, i32 0
  store i32 1, i32* %25, align 4
  br label %26

26:                                               ; preds = %19, %10
  store i32 0, i32* %2, align 4
  br label %27

27:                                               ; preds = %26, %7
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @connected(%struct.usb_dev_state*) #1

declare dso_local i32 @WRITE_ONCE(i32, i32) #1

declare dso_local i32 @usb_autosuspend_device(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
